--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
+    "react-spinners": "^0.15.0",
     "react-to-print": "^3.0.4",
-    "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
