--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "framer-motion": "^12.0.1",
+    "framer-motion": "^11.18.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.473.0",
     "mongodb": "^6.12.0",
     "next": "15.1.5",
