--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongodb": "^6.12.0",
     "next": "15.1.5",
     "react": "^19.0.0",
+    "react-date-picker": "^11.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
