--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.4",
+    "@react-pdf/renderer": "^4.1.6",
     "@shadcn/ui": "^0.0.4",
     "@tanstack/react-query": "^5.64.1",
-    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -31,9 +31,7 @@
     "next": "15.1.5",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
-    "react-date-picker": "^11.0.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
     "react-spinners": "^0.15.0",
     "tailwind-merge": "^2.6.0",
